[Fix][FE] Fix author, Fix logic form
